@@ -1,3 +1,9 @@
+2006-10-31  Brian Cameron  <brian.cameron@sun.com>
+
+        * gui/greeter/greeter_item_customlist.c: Fix custom lists so
+          that focus does not leave the username/password entry field.
+        * gui/greeter/greeter_item_pam.c: Minor cleanup.
+
 2006-10-30  Brian Cameron  <brian.cameron@sun.com>
 
         * Release 2.16.2:
